--- a/index.html
+++ b/index.html
@@ -1,393 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/index.css">
-    <title>Cards</title>
+    <title>Document</title>
 </head>
-
 <body>
-
-    <!-- Picka -->
-
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">6 <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> 6 <br> &#9824;</div>
-        </div>
-    </div>
-
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">7 <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> 7 <br> &#9824;</div>
-        </div>
-    </div>
-
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">8 <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> 8 <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">9 <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> 9 <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">10 <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> 10 <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">В <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> В <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">Д <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> Д <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">К <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> К <br> &#9824;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">Т <br> &#9824;</div>
-            <div class="center">&#9824;</div>
-            <div class="value spades"> Т <br> &#9824;</div>
-        </div>
-    </div>
-
-    <!-- Cherva -->
-
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">6 <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> 6 <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">7 <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> 7 <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">8 <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> 8 <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">9 <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> 9 <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">10 <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> 10 <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">В <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> В <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">Д <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> Д <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">К <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> К <br> &#9829;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">Т <br> &#9829;</div>
-            <div class="center hearts">&#9829;</div>
-            <div class="value hearts"> Т <br> &#9829;</div>
-        </div>
-    </div>
-
-    <!-- Bubna -->
-
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">6 <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> 6 <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">7 <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> 7 <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">8 <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> 8 <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">9 <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> 9 <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">10 <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> 10 <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">В <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> В <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">Д <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> Д <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">К <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> К <br> &#9830;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit hearts">Т <br> &#9830;</div>
-            <div class="center hearts">&#9830;</div>
-            <div class="value hearts"> Т <br> &#9830;</div>
-        </div>
-    </div>
-
-    <!-- Chresta -->
-
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">6 <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> 6 <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">7 <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> 7 <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">8 <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> 8 <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">9 <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> 9 <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">10 <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> 10 <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.25;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">В <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> В <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.5;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">Д <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> Д <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">К <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> <br> &#9827;</div>
-        </div>
-    </div>
-    <div class="card" style="--delay: 0.75;">
-        <div class="front">
-            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
-        </div>
-        <div class="back">
-            <div class="suit spades">Т <br> &#9827;</div>
-            <div class="center">&#9827;</div>
-            <div class="value spades"> Т <br> &#9827;</div>
-        </div>
-    </div>
-
-
-
-
+    <script src="script.js"></script>
 </body>
-
 </html>
